scylla/kustomize/scylla-cluster/base/scylla-dc-default-0-headless-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: scylla-dc-default-0-headless
  namespace: scylla
spec:
  ports:
  - name: inter-node-communication
    port: 7000
    protocol: TCP
    appProtocol: tcp
    targetPort: 7000
  - name: ssl-inter-node-communication
    port: 7001
    protocol: TCP
    appProtocol: tcp
    targetPort: 7001
  - name: jmx-monitoring
    port: 7199
    protocol: TCP
    appProtocol: tcp
    targetPort: 7199
  - name: agent-api
    port: 10001
    protocol: TCP
    appProtocol: tcp
    targetPort: 10001
  - name: prometheus
    port: 9180
    protocol: TCP
    appProtocol: tcp
    targetPort: 9180
  - name: agent-prometheus
    port: 5090
    protocol: TCP
    appProtocol: tcp
    targetPort: 5090
  - name: node-exporter
    port: 9100
    protocol: TCP
    appProtocol: tcp
    targetPort: 9100
  - name: cql
    port: 9042
    protocol: TCP
    appProtocol: tcp
    targetPort: 9042
  - name: cql-ssl
    port: 9142
    protocol: TCP
    appProtocol: tcp
    targetPort: 9142
  - name: cql-shard-aware
    port: 19042
    protocol: TCP
    appProtocol: tcp
    targetPort: 19042
  - name: cql-ssl-shard-aware
    port: 19142
    protocol: TCP
    appProtocol: tcp
    targetPort: 19142
  - name: thrift
    port: 9160
    protocol: TCP
    appProtocol: tcp
    targetPort: 9160
  selector:
    statefulset.kubernetes.io/pod-name: scylla-dc-default-0
  clusterIP: None
